--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Master thesis web</h1>
   <div id="app"></div>
-  <script src="main.js"></script>
+  <script src="../main.js"></script>
     <textarea rows="10" cols="100" id="codeInput"></textarea><br>
     <button type="button" id="buttonInput">Find bugs!</button>
     <p id="positionText"></p> <br>
