--- a/views/index.html
+++ b/views/index.html
@@ -11,9 +11,12 @@
   <script src="../main.js"></script>
     <textarea rows="10" cols="100" id="codeInput"></textarea><br>
     <button type="button" id="buttonInput">Find bugs!</button>
-    <p id="positionText"></p> <br>
-    <p id="explanationText"></p> <br>
-    <p id="suggestionText"></p> <br>
+    <p id="positionText"></p>
+    <p id="explanationText"></p>
+    <p id="suggestionText"></p>
+    <p id="linkText"></p>
+    <a href="#" id="urllink"></a>
+    <p id="tipText"></p>
 </body>
 <script>
   async function postInputData() {
@@ -44,12 +47,32 @@
         }
         document.getElementById("positionText").textContent = positionString;
         document.getElementById("explanationText").textContent = explanationString;
-        document.getElementById("suggestionText").textContent = suggestionString;
-      } else {
-        document.getElementById("positionText").textContent = "Found no errors!";
-        document.getElementById("explanationText").textContent = "";
-        document.getElementById("suggestionText").textContent = "";
+        document.getElementById("suggestionText").textContent = "You should try " +suggestionString;
+        if (obj.moreInfoLink) {
+          let linkString = obj.moreInfoLink;
+          document.getElementById("linkText").textContent = "More info? Check out:";
+          document.getElementById("urllink").textContent = linkString;
+          document.getElementById("urllink").href = {linkString};
+        }
+        if (obj.tip) {
+          let tip = obj.tip;
+          document.getElementById("tipText").textContent = tip;
+        }
 
+      } else {
+        if (obj.hasException === true) {
+          document.getElementById("positionText").textContent = "Something went wrong, we could not analyse your code. :(";
+          document.getElementById("explanationText").textContent = "";
+          document.getElementById("suggestionText").textContent = "";
+          document.getElementById("linkText").textContent = "";
+          document.getElementById("tipText").textContent = "";
+        } else {
+          document.getElementById("positionText").textContent = "Found no errors!";
+          document.getElementById("explanationText").textContent = "";
+          document.getElementById("suggestionText").textContent = "";
+          document.getElementById("linkText").textContent = "";
+          document.getElementById("tipText").textContent = "";
+        }
       }
     }
     );
