--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,19 @@
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<style>
+  p {color:white; font-family: sans-serif}
+  h1 {color:white; font-family: sans-serif}
+  h2 {color:white; font-family: sans-serif}
+  h3 {color:white; font-family: sans-serif}
+  a:link {color:white; font-family: sans-serif}
+  a:hover {color:gray; font-family: sans-serif}
+  a:visited {color:white; font-family: sans-serif}
+  a:active {color:gray; font-family: sans-serif}
+  ul {color:white; font-family: sans-serif}
+  div {margin-left: 50px; margin-right: 50px;}
+</style>
+<body style="background-color:#33475b">
   <h1>Master thesis web</h1>
   <div id="app"></div>
   <script src="../main.js"></script>
