--- a/views/ifstatement.html
+++ b/views/ifstatement.html
@@ -5,7 +5,20 @@
     <link rel="stylesheet" href="style.css">
     <title>If statement</title>
 </head>
-<body>
+<style>
+    p {color:white; font-family: sans-serif}
+    h1 {color:white; font-family: sans-serif}
+    h2 {color:white; font-family: sans-serif}
+    h3 {color:white; font-family: sans-serif}
+    a:link {color:white; font-family: sans-serif}
+    a:hover {color:gray; font-family: sans-serif}
+    a:visited {color:white; font-family: sans-serif}
+    a:active {color:gray; font-family: sans-serif}
+    ul {color:white; font-family: sans-serif}
+    div {margin-left: 50px; margin-right: 50px;}
+    pre {color:white; border-left: 2px solid white; margin-left: 5px;}
+</style>
+<body style="background-color:#33475b">
     <h1>If statement explanation</h1>
     <p>In Python, you can write:</p>
 
@@ -16,7 +29,7 @@
         somethingElse()
     </pre>
 
-    <p>and something() and somethingElse() would not be called if something were false. In Java, if you did the same thing:</p>
+    <p>and something() and somethingElse() will not be called if "something" is false. In Java, if you did the same thing:</p>
 
     <pre style="font-family: Consolas,Monaco,'Lucida Console','Liberation Mono','DejaVu Sans Mono','Bitstream Vera Sans Mono','Courier New';">
     if (something)
