--- a/views/equalsOp.html
+++ b/views/equalsOp.html
@@ -5,7 +5,20 @@
   <link rel="stylesheet" href="style.css">
   <title>Equals operator</title>
 </head>
-<body>
+<style>
+    p {color:white; font-family: sans-serif}
+    h1 {color:white; font-family: sans-serif}
+    h2 {color:white; font-family: sans-serif}
+    h3 {color:white; font-family: sans-serif}
+    a:link {color:white; font-family: sans-serif}
+    a:hover {color:gray; font-family: sans-serif}
+    a:visited {color:white; font-family: sans-serif}
+    a:active {color:gray; font-family: sans-serif}
+    ul {color:white; font-family: sans-serif}
+    div {margin-left: 50px; margin-right: 50px;}
+    pre {color:white; border-left: 2px solid white; margin-left: 5px;}
+</style>
+<body style="background-color:#33475b">
 <h1>Equals operator explanation</h1>
 <p>In Python, you can write:</p>
 
