--- a/views/index.html
+++ b/views/index.html
@@ -52,34 +52,37 @@
       document.getElementById("tipText").textContent = "";
       const obj = JSON.parse(JSON.stringify(json));
 
-      if (obj.status === "errors") {
-        let positionString = "In class " + obj.containingClass;
-        let explanationString = obj.explanation;
-        let suggestionString = obj.suggestion;
-        if (obj.lineNumber !== -1) {
-          positionString += ", on line number " + obj.lineNumber;
-        }
-        document.getElementById("positionText").textContent = positionString;
-        document.getElementById("explanationText").textContent = explanationString;
-        document.getElementById("suggestionText").textContent = "You should try " +suggestionString;
-        if (obj.moreInfoLink) {
-          let linkString = obj.moreInfoLink;
-          document.getElementById("linkText").textContent = "More info? Check out:";
-          document.getElementById("urllink").textContent = linkString;
-          document.getElementById("urllink").href = {linkString};
-        }
-        if (obj.tip) {
-          let tip = obj.tip;
-          document.getElementById("tipText").textContent = tip;
-        }
+      console.log(obj);
 
+      if (obj.hasException) {
+        document.getElementById("positionText").textContent = "Something went wrong, we could not analyse your code. :(";
+        document.getElementById("explanationText").textContent = obj.hasException;
+        document.getElementById("suggestionText").textContent = "";
+        document.getElementById("linkText").textContent = "";
+        document.getElementById("tipText").textContent = "";
       } else {
-        if (obj.hasException === true) {
-          document.getElementById("positionText").textContent = "Something went wrong, we could not analyse your code. :(";
-          document.getElementById("explanationText").textContent = "";
-          document.getElementById("suggestionText").textContent = "";
-          document.getElementById("linkText").textContent = "";
-          document.getElementById("tipText").textContent = "";
+
+        if (obj.status === "errors") {
+          let positionString = "In class " + obj.containingClass;
+          let explanationString = obj.explanation;
+          let suggestionString = obj.suggestion;
+          if (obj.lineNumber !== -1) {
+            positionString += ", on line number " + obj.lineNumber;
+          }
+          document.getElementById("positionText").textContent = positionString;
+          document.getElementById("explanationText").textContent = explanationString;
+          document.getElementById("suggestionText").textContent = "You should try " +suggestionString;
+          if (obj.moreInfoLink) {
+            let linkString = obj.moreInfoLink;
+            document.getElementById("linkText").textContent = "More info? Check out:";
+            document.getElementById("urllink").textContent = linkString;
+            document.getElementById("urllink").href = {linkString};
+          }
+          if (obj.tip) {
+            let tip = obj.tip;
+            document.getElementById("tipText").textContent = tip;
+          }
+
         } else {
           document.getElementById("positionText").textContent = "Found no errors!";
           document.getElementById("explanationText").textContent = "";
