--- a/views/bitwiseoperator.html
+++ b/views/bitwiseoperator.html
@@ -57,7 +57,7 @@
     }
 </pre>
 
-<p>will produce a NullPointerException, because "a.equals(b)" is checked even though a is null! To avoid this we use the boolean operator "&&" for "and" and "||" for or.</p>
+<p>will produce a NullPointerException, because "a.equals(b)" is checked even though a is null! To avoid this we use the boolean operator "&&" for "and" and "||" for "or".</p>
 
 </body>
 </html>
