--- a/views/integerdivision.html
+++ b/views/integerdivision.html
@@ -22,13 +22,13 @@
 <h1>Integer division explanation</h1>
 
 
-<p>When we divide two integers in Python, we get the decimal result:</p>
+<p>When we divide two integers in Python:</p>
 
 <pre style="font-family: Consolas,Monaco,'Lucida Console','Liberation Mono','DejaVu Sans Mono','Bitstream Vera Sans Mono','Courier New';">
     print(7/5)
     </pre>
 
-<p>The code above will print the number 1.4. But this is not the case in Java! Java rounds down to the lowest integer. We try the same in Java:</p>
+<p>we get the decimal result 1.4. But this is not the case in Java! Java rounds down to the lowest integer. We try the same in Java:</p>
 
 <pre style="font-family: Consolas,Monaco,'Lucida Console','Liberation Mono','DejaVu Sans Mono','Bitstream Vera Sans Mono','Courier New';">
     System.out.print(7/5);
