go from root folder

--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,9 @@
   <title>Master thesis web</title>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="../../../node_modules/codemirror/lib/codemirror.js"></script>
-  <link rel="stylesheet" href="../../../node_modules/codemirror/lib/codemirror.css">
-  <script src="../../../node_modules/codemirror/mode/clike/clike.js"></script>
+  <script src="node_modules/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
+  <script src="node_modules/codemirror/mode/clike/clike.js"></script>
 </head>
 <style>
   p {color:white; font-family: sans-serif}
