--- a/views/tasks.html
+++ b/views/tasks.html
@@ -3,9 +3,9 @@
 <head>
   <title>Master thesis web first task</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="/lib/codemirror.js"></script>
-  <link rel="stylesheet" href="/lib/codemirror.css">
-  <script src="/mode/clike/clike.js"></script>
+  <script src="../../../lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../../lib/codemirror.css">
+  <script src="../../mode/clike/clike.js"></script>
 </head>
 <style>
   p {color:white; font-family: sans-serif}
