--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="../../../lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../../lib/codemirror.css">
-  <script src="../../mode/clike/clike.js"></script>
+  <script src="../../../mode/clike/clike.js"></script>
 </head>
 <style>
   p {color:white; font-family: sans-serif}
