--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,9 @@
   <title>Master thesis web</title>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="../../../lib/codemirror.js"></script>
-  <link rel="stylesheet" href="../../../lib/codemirror.css">
+  <script src="lib/codemirror.js"></script>
+  <link rel="stylesheet" href="lib/codemirror.css">
+  <script src="mode/clike/clike.js"></script>
 </head>
 <style>
   p {color:white; font-family: sans-serif}
