--- a/views/tasks.html
+++ b/views/tasks.html
@@ -3,9 +3,6 @@
 <head>
   <title>Master thesis web first task</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="../../../lib/codemirror.js"></script>
-  <link rel="stylesheet" href="../../../lib/codemirror.css">
-  <script src="../../../mode/clike/clike.js"></script>
 </head>
 <style>
   p {color:white; font-family: sans-serif}
@@ -156,7 +153,9 @@ public class TaskFive {
     <a href="#" id="urllink"></a>
     <p id="tipText"></p>
 </body>
-<script>
+<script type="module">
+
+import CodeMirror from 'codemirror/lib/codemirror.js';
 
 let taskNumber = 0;
 const taskNames = ["taskOneText", "taskTwoText", "taskThreeText", "taskFourText", "taskFiveText"];
