Replace line when new task

--- a/views/tasks.html
+++ b/views/tasks.html
@@ -342,6 +342,18 @@ function shouldIgnoreError(obj) {
   function nextTask() {
       taskNumber += 1;
       document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
+      test = document.getElementById("editor").textContent;
+      console.log(test);
+      lines = test.split("\n");
+      console.log(lines);
+      linenumbers = lines.length;
+      console.log(linenumbers);
+
+      document.getElementById("editorLines").textContent="";
+      
+      for (let i = 1; i < linenumbers; i++) {
+        document.getElementById("editorLines").textContent +=i + "\n";
+      }
   }
  
   document.getElementById('buttonInput').addEventListener('click', postInputData, false);
