--- a/views/tasks.html
+++ b/views/tasks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Master thesis web first task</title>
+  <title>Master thesis web tasks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
@@ -161,6 +161,7 @@ public class TaskFive {
 
     <button type="button" id="buttonInput">Check code</button>
     <button type="button" id="buttonGetTips">Get tip</button>
+    <button type="button" id="buttonPreviousTask">Previous task</button>
     <button type="button" id="buttonNextTask">Next task</button>
     <p id="positionText"></p>
     <p id="explanationText"></p>
@@ -341,23 +342,45 @@ function shouldIgnoreError(obj) {
 
   function nextTask() {
       taskNumber += 1;
-      document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
-      test = document.getElementById("editor").textContent;
-      console.log(test);
-      lines = test.split("\n");
-      console.log(lines);
-      linenumbers = lines.length;
-      console.log(linenumbers);
+      if (taskNumber != 6) {
+        document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
+        test = document.getElementById("editor").textContent;
+        console.log(test);
+        lines = test.split("\n");
+        console.log(lines);
+        linenumbers = lines.length;
+        console.log(linenumbers);
 
-      document.getElementById("editorLines").textContent="";
-      
-      for (let i = 1; i < linenumbers; i++) {
-        document.getElementById("editorLines").textContent +=i + "\n";
-      }
+        document.getElementById("editorLines").textContent="";
+        
+        for (let i = 1; i < linenumbers; i++) {
+          document.getElementById("editorLines").textContent +=i + "\n";
+        }
+    }
+  }
+
+  function previousTask() {
+      taskNumber -= 1;
+      if (taskNumber != -1) {
+        document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
+        test = document.getElementById("editor").textContent;
+        console.log(test);
+        lines = test.split("\n");
+        console.log(lines);
+        linenumbers = lines.length;
+        console.log(linenumbers);
+
+        document.getElementById("editorLines").textContent="";
+        
+        for (let i = 1; i < linenumbers; i++) {
+          document.getElementById("editorLines").textContent +=i + "\n";
+        }
+    }
   }
  
   document.getElementById('buttonInput').addEventListener('click', postInputData, false);
   document.getElementById('buttonGetTips').addEventListener('click', analyseCode, false);
   document.getElementById('buttonNextTask').addEventListener('click', nextTask, false);
+  document.getElementById('buttonPreviousTask').addEventListener('click', previousTask, false);
 </script>
 </html>
